--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,4 +8,6 @@ crate-type = ["cdylib"] # Compile this crate to a dynamic C library.
 
 [dependencies]
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
-cpal = "0.15"
+cpal = { version = "0.15", features = ["oboe-shared-stdcxx"] }
+[target.'cfg(target_os = "android")'.dependencies]
+oboe = { version = "0.6", features = ["java-interface", "shared-stdcxx"] }
